# build-helper-xpack

./: .npmignore  CHANGELOG.md  README-MAINTAINER.md  README-WARNINGS.md  README.md  package.json
.github/workflows/: CI.yml  ci.yml
cmake/: INTERFACE-template.cmake  README.md  TIPS-AND-TRICKS.md  micro-os-plus-build-helper.cmake  template-library-INTERFACE.cmake  template-library-STATIC.cmake  toolchain-arm-none-eabi-gcc.cmake  toolchain-gcc.cmake  toolchain-riscv-none-embed-gcc.cmake  xpack-helper.cmake
cmake/templates/: library-INTERFACE-CMakeLists.txt  library-STATIC-CMakeLists.txt
cmake/toolchains/: aarch64-none-elf-gcc.cmake  arm-none-eabi-gcc.cmake  clang.cmake  gcc.cmake  riscv-none-elf-gcc.cmake  riscv-none-embed-gcc.cmake
dev-scripts/: README.md  clone-and-link-all-git-repos.sh  convert-arm-asm-to-c.sh  copy-npmignore.sh  get-libraries-paths.sh  git-commit.sh  git-push.sh  git-status.sh  sed-endif.sh
doxygen/: README.md  TIPS & TRICKS.md  cards.css  common-config.doxyfile  common-header-micro-os-plus.html  common-header.html
meson/: toolchain-clang-cmd.ini  toolchain-gcc-cmd.ini
meson/enable-all-warnings/: meson.build
meson/templates/: dependency-meson.build  library-meson.build
meson/toolchains/: aarch64-none-elf-gcc-linux.ini  aarch64-none-elf-gcc-win32.ini  arm-none-eabi-gcc-cmd.ini  arm-none-eabi-gcc.ini  gcc-cmd.ini  gcc.ini  riscv-none-elf-gcc-darwin.ini  riscv-none-elf-gcc-win32.ini
meta/: xpack-root.json
scripts/: clang-format.sh  clone-and-link-all-git-repos.sh  convert-arm-asm-to-c.sh  copy-clang-format.sh  copy-gitignore.sh  git-commit.sh  git-merge-develop.sh  git-push.sh  xpm-link-all.sh
templates/: .npmignore  CHANGELOG-MICRO-OS-PLUS.md  CHANGELOG-XPACK-3RD-PARTY.md  CHANGELOG-XPACK.md  CMakeLists.txt  README-3RD-PARTY.md  README-MAINTAINER-3RD-PARTY.md  README-MAINTAINER-XPACK.md  README-XPACK.md  meson.build  package-micro-os-plus.json  package-xpack-3rd-party.json  package-xpack.json  xpackage.json
templates/.github/workflows/: CI.yml  ci.yml  test-all.yml
templates/cmake/: README.md  library-INTERFACE-CMakeLists.txt  library-STATIC-CMakeLists.txt
templates/meson/: dependency-meson.build  library-meson.build
templates/tests-3rd-party/: CMakeLists.txt  README.md  meson.build
templates/tests-3rd-party/cmake/: globals.cmake
templates/tests-3rd-party/meson/globals/: meson.build
templates/tests-3rd-party/platform-native/: CMakeLists.txt  meson.build
templates/tests-3rd-party/platform-native/include-config/micro-os-plus/: config.h
templates/tests-3rd-party/platform-native/meson/globals/: meson.build
templates/tests-3rd-party/platform-qemu-mps2-an386/: CMakeLists.txt  meson.build
templates/tests-3rd-party/platform-qemu-mps2-an386/cmake/: globals.cmake
templates/tests-3rd-party/platform-qemu-mps2-an386/include-config/micro-os-plus/: config.h
templates/tests-3rd-party/platform-qemu-mps2-an386/meson/globals/: meson.build
templates/tests-3rd-party/scripts/: test-all.sh  trigger-workflow-test-all.sh
templates/tests-3rd-party/src/: sample-test.cpp  unit-test.cpp
templates/tests-xpack/: CMakeLists.txt  meson.build
templates/tests-xpack/platform-native/: CMakeLists.txt  meson.build
templates/tests-xpack/platform-native/meson/globals/: meson.build
templates/tests-xpack/platform-qemu-mps2-an386/: CMakeLists.txt  meson.build
templates/tests-xpack/scripts/: trigger-workflow-test-all.sh
templates/tests-xpack/src/: sample-test.cpp  unit-test.cpp
templates/tests/cmake/: globals.cmake
templates/tests/platform-native/: CMakeLists.txt  meson.build
templates/tests/platform-native/meson/globals/: meson.build
templates/tests/platform-qemu-mps2-an386/: CMakeLists.txt  meson.build
templates/tests/platform-qemu-mps2-an386/cmake/: globals.cmake
templates/tests/platform-qemu-mps2-an386/meson/globals/: meson.build
templates/tests/src/: sample-test.cpp  unit-test.cpp
tests/: CMakeLists.txt
tests/meta/: CMakeLists.txt
